@@ -4,8 +4,8 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>Akka gRPC Scala example project</name>
-    <groupId>com.example.helloworld</groupId>
-    <artifactId>akka-grpc-helloworld-scala</artifactId>
+    <groupId>chainsawman</groupId>
+    <artifactId>algo</artifactId>
     <version>0.1-SNAPSHOT</version>
 
     <properties>
@@ -18,6 +18,7 @@
         <scala.binary.version>2.12</scala.binary.version>
         <grpc.version>1.28.1</grpc.version>
         <project.encoding>UTF-8</project.encoding>
+
     </properties>
 
     <dependencies>
@@ -137,13 +138,89 @@
             <artifactId>nebula-spark-connector</artifactId>
             <version>3.0.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/nebula-spark-connector_3.0-3.0-SNAPSHOT-jar-with-dependencies.jar</systemPath>
+            <systemPath>${project.basedir}/lib/nebula-spark-connector_3.0-3.0-SNAPSHOT-jar-with-dependencies.jar
+            </systemPath>
         </dependency>
 
     </dependencies>
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.5.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>AlgoApplication</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <descriptors>
+                        <descriptor>${basedir}/assembly/release.xml</descriptor>
+                    </descriptors>
+                    <finalName>${project.artifactId}-${project.version}-with-dependencies</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>reference.conf</resource>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.2.2</version>
+                <executions>
+                    <execution>
+                        <id>build-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <imageName>${project.groupId}/${project.artifactId}:${project.version}</imageName>
+                    <baseImage>khipu/openjdk17-alpine</baseImage>
+                    <entryPoint>["java","--add-opens=java.base/java.lang.invoke=ALL-UNNAMED","--add-opens=java.base/java.nio=ALL-UNNAMED", "--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED","-jar","/${project.build.finalName}-with-dependencies.jar"]
+                    </entryPoint>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}-with-dependencies.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
